@@ -530,6 +530,11 @@ the split links with commas and spaces.
 
 sub maybelink {
     my ($links,$regex,$join) = @_;
+    if (not defined $regex and not defined $join) {
+	 $links =~ s{((?:ftp|http|https)://[\S~-]+?/?)([\)\'\:\.\,]?(?:\s|\.<|$))}
+		    {q(<a href=\").html_escape($1).q(\">).html_escape($1).q(</a>).$2}geimo;
+	 return $links;
+    }
     $join = ' ' if not defined $join;
     my @return;
     my @segments;
